# ippsample

./: .appveyor.yml  .cups-upstream  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .travis.yml  BUILD.md  CONTRIBUTING.md  DEVELOPING.md  DOCKER-COMPOSE.md  DOCKER.md  Dockerfile  LICENSE.md  Makedefs.in  Makefile  NOTICE  PI.md  README.md  SCRIPTING.md  SECURITY.md  TESTING.md  config.h.in  configure  configure.ac  docker-compose.yml  ippsample.docker  runtests.sh
.github/: codeql.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  coverity.yml  docker.yml
appimage/: AppRun  ippserver.desktop
config-scripts/: cups-common.m4  cups-compiler.m4  cups-directories.m4  cups-dnssd.m4  cups-largefile.m4  cups-network.m4  cups-opsys.m4  cups-pam.m4  cups-poll.m4  cups-ssl.m4  cups-threads.m4
cups/: Dependencies  Makefile  api.header  api.intro  api.shtml  array.c  auth.c  cups-private.h  cups.h  cupspm.epub  cupspm.html  debug.c  dest-localization.c  dest-options.c  dest.c  dir.c  encode.c  error.c  file.c  getdevices.c  getputfile.c  globals.c  hash.c  http-addr.c  http-addrlist.c  http-support.c  http.c  ipp-file.c  ipp-support.c  ipp.c  ipp.h  language.c  libcups2.def  options.c  pwg-media.c  raster-private.h  raster.c  raster.h  request.c  string-private.h  (+10 more)
doc/: Makefile  api.html  ippdoclint.1  ippdoclint.html  ippfind.1  ippfind.html  ippfind.man  ippproxy.8  ippproxy.html  ippproxy.man  ippserver.8  ippserver.html  ippserver.man  ipptool.1  ipptool.html  ipptool.man  ipptoolfile.5  ipptoolfile.html  ipptoolfile.man  ipptransform.1  ipptransform.html  ipptransform.man  ipptransform3d.1  ipptransform3d.html  ipptransform3d.man  mantohtml.c
examples/: Makefile  cancel-current-job.test  cancel-job.test  create-job-3d.test  create-job-format.test  create-job-sheets.test  create-job-timeout.test  create-job.test  create-printer-pcl.test  create-printer-pwg.test  create-printer-subscription.test  create-printer.test  create-resource-strings.test  cylinder.3mf  delete-printer.test  disable-printer.test  en.strings  enable-printer.test  get-completed-jobs.test  get-jobs-all.test  get-jobs-fetchable.test  get-jobs.test  get-notifications.test  get-printers.test  get-system-attributes.test  heartgears.3mf  ipp-1.1.test  ipp-3d-with-grommet.stl  ipp-3d.test  ipp-everywhere.test  ipp3d-with-grommet.scad  ipp3d.3mf  ipp3d.scad  ipp3d.stl  pause-printer.test  print-job-and-wait.test  print-job-draft.test  print-uri.test  pwg5100.1.test  pwg5100.11.test  (+25 more)
infra/: Makefile  ipp.c  ippinfra.h
man/: Dependencies  Makefile  api.epub  ipp3dprinter.1  ipp3dprinter.html  ippdoclint.7  ippdoclint.html  ippeveprinter.1  ippeveprinter.html  ippfind.html  ippproxy.8  ippproxy.html  ippserver.8  ippserver.html  ipptool.html  ipptransform.7  ipptransform.html  ipptransform3d.1  ipptransform3d.7  ipptransform3d.html
proxy/: Dependencies  Makefile  ippproxy.c
scripts/: bonjour-access-tests.test  bonjour-tests.bat  bonjour-tests.sh  clone-printer.sh  document-tests.test  ipp-tests.bat  ipp-tests.sh  ipp-tests.test  make-ippeveselfcert.sh  make-ippsample-movie  make-pwg-samples.sh  makesrcdist  update-cups.sh
server/: DESIGN.md  Dependencies  EXTENSIONS.md  Makefile  auth.c  client.c  conf.c  device.c  ipp.c  ippserver.h  ippserver.man  job.c  log.c  main.c  printer-png.h  printer.c  printer3d-png.h  printer3d.opacity  resource.c  subscription.c  transform.c
snap/: snapcraft.yaml
test/: README.txt  en.strings  fr.strings  run-tests.sh  srgb.icc  start-server.sh  system.conf
test/print/: bar.conf  foo.conf  infra.conf  ipp-everywhere-pdf.conf  ipp-everywhere-raster.conf  ippserver-data-type-test.conf  pwg-5100-1-2022.conf
test/print3d/: foo3d.conf
tests/: bonjour-access-tests.test  bonjour-access-tests.test.in  bonjour-tests.bat  bonjour-tests.bat.in  bonjour-tests.sh  bonjour-tests.sh.in  bonjour-value-tests.test  bonjour-value-tests.test.in  document-tests.bat  document-tests.bat.in  document-tests.sh  document-tests.sh.in  document-tests.test  document-tests.test.in  ipp-tests.bat  ipp-tests.test  ipp-tests.test.in
tools/: Dependencies  Makefile  ipp-options.c  ipp-options.h  ipp3dprinter.c  ippdoclint.c  ippeveprinter.c  ippfind.c  ippproxy.c  ippserver.c  ipptool.c  ipptransform.c  ipptransform3d.c  threshold64.h
vcnet/: config.h  copydlls.bat  ippdoclint.vcxproj  ippeveprinter.vcxproj  ippeveprinter.vcxproj.filters  ippeveselfcert.sln  ippfind.vcxproj  ippproxy.vcxproj  ippsample.sln  ippserver.vcxproj  ippserver.vcxproj.filters  ipptool.vcxproj  ipptransform.vcxproj  libcups2.vcxproj  libcups2.vcxproj.filters  regex.vcxproj  signmsi.bat  sw-ippeveselfcert10.vdproj
xcode/: config.h
xcode/ippsample.xcodeproj/: project.pbxproj
xcode/ippsample.xcodeproj/xcshareddata/xcschemes/: All.xcscheme  ippdoclint.xcscheme  ippproxy.xcscheme  ippserver.xcscheme
xcode/ippsample.xcworkspace/: contents.xcworkspacedata
